--- a/style.css
+++ b/style.css
@@ -107,15 +107,10 @@ input, select {
   text-decoration: none;
 }
 
-body {
-  background-color: #f3f3f3;
-
-}
 header {
   background-color: #fff;
   width: 100%;
   height: 100px;
-
 }
 
 header .header-brand {
@@ -135,6 +130,7 @@ header nav ul {
   margin: 0 auto;
   width: fit-content;
 }
+
 header nav ul li {
   display: inline-block;
   float: left;
@@ -145,25 +141,133 @@ header nav ul li a {
   font-family: Catamaran;
   font-size: 16px;
   color: #111;
+  text-transform: uppercase;
 }
 
 header .header-cases {
   display: none;
 }
 
-/*INDEX*/
+@media only screen and (min-width: 1000px) {
+  header .header-brand {
+    margin: 31px 0;
+    text-align: left;
+    line-height: 38px;
+    padding: 0px 20px 0 40px;
+    border-right: 3px solid #111;
+    float:left;
+    }
+  header nav ul {
+    margin: 20px 0px 0px 20px;
+    float: left;
+}
 
+  header nav ul li a {
+    line-height: 60px;
+  }
+  header .header-cases {
+    display: block;
+    font-family: Catamaran;
+    font-size: 16px;
+    color: #111;
+    text-transform: uppercase;
+    line-height: 60px;
+    border: 1px solid #111;
+    float: right;
+  }
+}
+/*INDEX*/
 .index-banner {
-    width: 100%;
-    height: calc(100vh - 100px);
-    background-image: url('img/CYDT1.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  width: 100%;
+  height: calc(100vh - 100px);
+  background-image: url('img/CyDT1.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: table;
+}
+
+.vertical-center {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .index-banner h2 {
   font-family: Catamaran;
   font-size: 60px;
-  color: #black;
+  font-weight: 900;
+  line-height: 70px;
+  color: #fff;
   text-align: center;
+  text-shadow: 2px 2px 8px #111;
+}
+
+.index-banner h1 {
+  font-family: Cormorant Garamond;
+  font-size: 28px;
+  font-weight: 100;
+  font-style: italic;
+  line-height: 40px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 2px 2px 8px #111;
+}
+
+.index-links div {
+  margin: 16px 16px 0;
+  width: calc(100% - 32px);
+  height: 100px;
+  background-color: #f2f2f2;
+}
+
+p {
+  color: #111;
+}
+
+.index-links div h3 {
+  font-family: Catamaran;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 40px;
+  color: #111;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+/*FOOTER*/
+
+footer {
+  width: calc(100% - 80px);
+  padding: 40px 40px;
+  margin-top: 20px;
+  background-color: #111;
+  overflow: hidden;
+}
+
+footer ul {
+  width: fit-content;
+  float: left;
+  padding-left: 20px;
+}
+footer ul li {
+  display: block;
+  list-style: none;
+}
+footer ul li a {
+  font-family: Catamaran;
+  font-size: 24px;
+  color: #fff;
+  line-height: 40px;
+}
+.footer-links-cases {
+  display: none;
+}
+
+.footer-sm {
+  width: 50px;
+  float: right;
+}
+.footer-sm img {
+  width: 100%;
+  margin-bottom: 10px;
+}
