--- a/style.css
+++ b/style.css
@@ -106,8 +106,16 @@ input, select {
 * {
   text-decoration: none;
 }
+main {
+  padding-top: 100px;
+  
+}
 
 header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
   background-color: #fff;
   width: 100%;
   height: 100px;
@@ -157,6 +165,7 @@ header .header-cases {
     border-right: 3px solid #111;
     float:left;
     }
+
   header nav ul {
     margin: 20px 0px 0px 20px;
     float: left;
@@ -171,9 +180,12 @@ header .header-cases {
     font-size: 16px;
     color: #111;
     text-transform: uppercase;
-    line-height: 60px;
+    line-height: 38px;
     border: 1px solid #111;
     float: right;
+    margin-right: 40px;
+    margin-top: 31px;
+    padding: 0 20px;
   }
 }
 /*INDEX*/
@@ -234,6 +246,46 @@ p {
   text-transform: uppercase;
 }
 
+@media only screen and (min-width: 1000px) {
+  .wrapper {
+    width: 1000px;
+    margin: 0 auto;
+  }
+  .index-banner {
+    height: 450px;
+
+  }
+
+  .index-banner h1 {
+    display: block;
+    width: 560px;
+    margin: 0 auto;
+}
+
+  .index-links div {
+    padding-bottom: 20px;
+    overflow: hidden;
+  }
+  .index-links div {
+    margin: 20px 10px 0;
+    height: 230px;
+    background-color: #f2f2f2;
+    float: left;
+  }
+
+  .index-boxlink-square {
+    width: calc(25% - 20px) !important;
+  }
+  .index-boxlink-rectangle {
+    width: calc(50% - 20px) !important;
+  }
+
+  .index-links div h3 {
+    line-height: 30px;
+
+  }
+
+}
 /*FOOTER*/
 
 footer {
@@ -270,4 +322,22 @@ footer ul li a {
 .footer-sm img {
   width: 100%;
   margin-bottom: 10px;
+}
+
+@media only screen and (min-width: 1000px) {
+    .footer-links-cases {
+      display: block;
+}
+
+    footer ul {
+    padding-right: 30px;
+}
+
+    footer ul li p {
+      font-family: Catamaran;
+      font-size: 24px;
+      color: #fff;
+      line-height: 40px;
+      text-transform: uppercase;
+    }
 }
